mxslc/tests/data/error/bad_func_name_1.mxsl
vector3 crossproduct(vector3 a, vector3 b)
{
    return vec3();
}
